# ergochemics

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
examples/: basic_usage.ipynb  mapped_known_reactions_x_rc_plus_0_rules.parquet  reaction_similarity.ipynb  rhea-directions.tsv  rhea2ec.tsv
scripts/: atom_map_for_hiec.py  test.py
src/ergochem/: draw.py  mapping.py  similarity.py  standardize.py  test.py
src/ergochem.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ergochemics/: draw.py  mapping.py  similarity.py  standardize.py
tests/: test_mapping.py  test_similarity.py  test_standardize.py
