[project]
name = "ergochemics"
version = "0.1.0"
description = "Ergonomical cheminformatics library"
readme = "README.md"
authors = [
    { name = "stefanpate", email = "stefanpate94@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "rdkit>=2024.9.5",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ergochemics",
]

[tool.uv.sources]
ergochemics = { workspace = true }
