[project]
name = "ergochemics"
version = "0.1.2"
description = "Ergonomical cheminformatics library"
readme = "README.md"
authors = [
    { name = "stefanpate", email = "stefanpate94@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "rdkit>=2024.9.5",
]
license = "MIT"
license-files = ["LICENSE*"]

[project.urls]
"Source Code" = "https://github.com/stefanpate/ergochemics"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ergochemics",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "pyarrow>=22.0.0",
    "pytest>=9.0.2",
]

[tool.uv.sources]
ergochemics = { workspace = true }
